[gd_scene load_steps=10 format=3 uid="uid://d1ibgfwne281y"]

[ext_resource type="Script" uid="uid://dppcbcba5rvbf" path="res://GameLevelsETC/level_1.gd" id="1_oh3op"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="2_jvlpr"]
[ext_resource type="PackedScene" uid="uid://bs2jm62cmkbrk" path="res://addons/instant-realistic-light/light_scene.tscn" id="3_jo2a5"]
[ext_resource type="PackedScene" uid="uid://b36mjwh3wwi6m" path="res://GameLevelsETC/Items/bat_clean.tscn" id="12_wjimw"]
[ext_resource type="PackedScene" uid="uid://cg04msv62ujdu" path="res://Max's Folder (do not touch!!!)/pcg_attempt.tscn" id="13_grjf3"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_gn88m"]
ground_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_tyhie"]
sky_material = SubResource("PhysicalSkyMaterial_gn88m")
radiance_size = 2

[sub_resource type="Environment" id="Environment_f8w8m"]
background_mode = 2
background_intensity = 100000.0
sky = SubResource("Sky_tyhie")
tonemap_mode = 3
tonemap_white = 8.0
ssao_enabled = true
ssao_detail = 2.0
sdfgi_enabled = true
sdfgi_bounce_feedback = 0.9
glow_enabled = true
glow_normalized = true
glow_bloom = 0.2
fog_enabled = true
fog_mode = 1
fog_light_color = Color(9.241105e-06, 0.7351877, 0.99128824, 1)
fog_density = 1.0
fog_height_density = 1.0
fog_depth_curve = 0.00929068
fog_depth_begin = 40.0
fog_depth_end = 45.0
volumetric_fog_density = 1.0
volumetric_fog_albedo = Color(0.4862745, 1, 0.95686275, 1)
volumetric_fog_emission = Color(1, 1, 0.5647059, 1)
volumetric_fog_emission_energy = 5.0
volumetric_fog_gi_inject = 16.0
volumetric_fog_ambient_inject = 3.1
volumetric_fog_sky_affect = 0.295
adjustment_saturation = 1.17

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_qo5hu"]
exposure_multiplier = 3.069
auto_exposure_scale = 0.22
auto_exposure_speed = 0.8
dof_blur_far_distance = 1.44
dof_blur_near_distance = 0.01
auto_exposure_min_sensitivity = 8.01

[node name="Level1" type="Node3D"]
script = ExtResource("1_oh3op")
player_scene = ExtResource("2_jvlpr")

[node name="WorldEnvironment" parent="." instance=ExtResource("3_jo2a5")]
environment = SubResource("Environment_f8w8m")
camera_attributes = SubResource("CameraAttributesPractical_qo5hu")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bs72ogkvdd7d6")
spawn_path = NodePath("..")
spawn_limit = 5

[node name="gen" type="Node3D" parent="."]
visible = false

[node name="Items" type="Node" parent="."]

[node name="BatClean" parent="Items" instance=ExtResource("12_wjimw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5201786, 3.1837187, -3.0952702)

[node name="Menu" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Menu"]

[node name="Host" type="Button" parent="Menu/CanvasLayer"]
anchors_preset = -1
anchor_right = 0.2560764
anchor_bottom = 0.10185185
offset_left = 253.0
offset_top = 28.0
offset_right = 297.0
offset_bottom = 59.0
text = "Host
"
metadata/_edit_use_anchors_ = true

[node name="Join" type="Button" parent="Menu/CanvasLayer"]
anchors_preset = -1
anchor_left = -0.0034722222
anchor_right = 0.2560764
anchor_bottom = 0.12808642
offset_left = 258.0
offset_top = 131.0
offset_right = 296.0
offset_bottom = 162.0
text = "Join
"
metadata/_edit_use_anchors_ = true

[node name="joinCode" type="LineEdit" parent="Menu/CanvasLayer"]
offset_left = 330.0
offset_top = 247.0
offset_right = 507.0
offset_bottom = 287.0

[node name="PCGAttempt" parent="." instance=ExtResource("13_grjf3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.782766, -0.83148956, 0)

[connection signal="pressed" from="Menu/CanvasLayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/CanvasLayer/Join" to="." method="_on_join_pressed"]
